--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@ button#startTestButton:hover {
 <body style="background-color: beige;">
 
     {% include 'top_menu.html' %}
-    <h1>Добро пожаловать на страницу</h1>
+    <h1>Добро пожаловать на страницу команды DLEnchance</h1>
 
     <!-- Форма для отправки POST-запроса -->
     <form method="POST">
