--- a/templates/create_question.html
+++ b/templates/create_question.html
@@ -7,7 +7,7 @@
     <!-- Подключаем стили Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body style="background-color: beige;">
     {% include 'top_menu.html' %}
 
     <div class="container mt-5">
