--- a/templates/end_test.html
+++ b/templates/end_test.html
@@ -2,12 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Конец теста</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h2 {
+            margin-top: 0;
+            font-size: 24px;
+            color: #333;
+        }
+
+        #myChart {
+            max-width: 80%;
+            margin: 20px auto;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        button#startTestButton {
+            display: block;
+            margin: 0 auto;
+            margin-top: 20px;
+            background-color: black;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button#startTestButton:hover {
+            background-color: gold;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <h2>Конец теста</h2>
+    <h2>{{ percent }}% правильно было отвечено</h2>
+    <canvas id="myChart" width="400" height="100"></canvas>
+    <script>
+        var seconds = {{ seconds }}; // Ваш массив данных
 
-    <!-- Добавляем кнопку с ссылкой на страницу base -->
-    <a href="{{ url_for('base') }}"><button>На главную страницу</button></a>
+        // Создаем и отображаем график линии
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: Array.from(seconds.keys()), // Нумерация вопросов
+                datasets: [{
+                    label: 'Время на вопрос (сек)',
+                    data: seconds,
+                    fill: false,
+                    borderColor: 'rgba(54, 162, 235, 1)'
+                }]
+            },
+            options: {
+                legend: {
+                    display: false
+                },
+                responsive: false
+            }
+        });
+    </script>
+    <a href="{{ url_for('base') }}"><button id="startTestButton">На главную страницу</button></a>
 </body>
 </html>
