--- a/templates/process_test.html
+++ b/templates/process_test.html
@@ -5,53 +5,107 @@
     <title>Уже само тестирование</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
+        /* Стили для общих контейнеров */
+        .container {
+            margin: 20px auto;
+            max-width: 800px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #f9f9f9;
+        }
+
+        /* Стили для изображения */
         .fixed-image {
-            width: 200px; /* Ширина изображения */
-            height: auto; /* Автоматическая высота, чтобы сохранить пропорции */
+            display: block;
+            margin: 0 auto 20px;
+            max-width: 200px;
+            height: auto;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Стили для текста */
+        p {
+            font-size: 18px;
+            line-height: 1.5;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        /* Стили для кнопки */
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+         /* Стили для таймера */
+        #timer {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 24px;
+            color: #333;
         }
     </style>
 </head>
 <body>
-
-    {% if question.image_url != '/photo/default.jpg' %}
-        <img src="{{ url_for('static', filename=question.image_url) }}" alt="Image" class="fixed-image">
-    {% endif %}
-
-    <!-- Форма для отправки POST-запроса -->
-    <div id="timer"></div>
-    <p>{{ question.text }}</p>
-    <div>
-        {% if multiple %}
-            <h4>Множественный выбор:</h4>
-            <form id="testForm" action="/tests/{{ test_id }}/main_go_test/{{ random_id }}" method="post">
-                <ul>
-                    {% for answer in answers %}
-                        <li>
-                            <input type="checkbox" id="answer_{{ answer.id }}" name="answers[]" value="{{ answer.id }}">
-                            <label for="answer_{{ answer.id }}">{{ answer.name }}</label>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <button type="button" onclick="submitForm()" class="btn btn-primary mb-3">Вперед</button>
-            </form>
-        {% else %}
-            <h4>Выберите один вариант ответа:</h4>
-            <form id="testForm" action="/tests/{{ test_id }}/main_go_test/{{ random_id }}" method="post">
-                <ul>
-                    {% for answer in answers %}
-                        <li>
-                            <input type="radio" id="answer_{{ answer.id }}" name="answers[]" value="{{ answer.id }}">
-                            <label for="answer_{{ answer.id }}">{{ answer.name }}</label>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <button type="button" onclick="submitForm()" class="btn btn-primary mb-3">Вперед</button>
-            </form>
+    <div class="container">
+        {% if question.image_url != '/photo/default.jpg' %}
+            <img src="{{ url_for('static', filename=question.image_url) }}" alt="Image" class="fixed-image">
         {% endif %}
+        <p>{{ question.text }}</p>
+        <!-- Форма для отправки POST-запроса -->
+<!--        <div id="timer"></div>-->
+<!--        <p>{{ question.text }}</p>-->
+<!--        <div>-->
+            {% if multiple %}
+                <h4>Множественный выбор:</h4>
+                <form id="testForm" action="/tests/{{ test_id }}/main_go_test/{{ random_id }}" method="post">
+                    <ul>
+                        {% for answer in answers %}
+                            <li>
+                                <input type="checkbox" id="answer_{{ answer.id }}" name="answers[]" value="{{ answer.id }}">
+                                <label for="answer_{{ answer.id }}">{{ answer.name }}</label>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <button type="button" onclick="submitForm()" class="btn btn-primary mb-3">Вперед</button>
+                </form>
+            {% else %}
+                <h4>Выберите один вариант ответа:</h4>
+                <form id="testForm" action="/tests/{{ test_id }}/main_go_test/{{ random_id }}" method="post">
+                    <ul>
+                        {% for answer in answers %}
+                            <li>
+                                <input type="radio" id="answer_{{ answer.id }}" name="answers[]" value="{{ answer.id }}">
+                                <label for="answer_{{ answer.id }}">{{ answer.name }}</label>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <button type="button" onclick="submitForm()" class="btn btn-primary mb-3">Вперед</button>
+                </form>
+            {% endif %}
+        </div>
     </div>
+    </div>
+        <!-- Вывод таймера -->
+        <div id="timer"></div>
 
-
-    <script>
+    </div>
+     <script>
         // Функция для отображения таймера
         function startTimer(duration, display) {
             var timer = duration, minutes, seconds;
@@ -98,3 +152,8 @@
     </script>
 </body>
 </html>
+
+
+
+
+
