--- a/templates/question.html
+++ b/templates/question.html
@@ -39,7 +39,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: beige;">
     {% include 'top_menu.html' %}
     <div class="container">
         <form method="GET" action="{{ url_for('display_questions') }}">
